rbac-best-practices-cel/restrict-escalation-verbs-roles/e2e/vap-binding-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-escalation-verbs-roles-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-escalation-verbs-roles
spec:
  policyName: restrict-escalation-verbs-roles
